Fixed attachments overlapping

--- a/styles/desktop/attachments.less
+++ b/styles/desktop/attachments.less
@@ -295,14 +295,15 @@
 
 		.main_action {
 			position: absolute;
+			top: 0;
+			z-index: 0;
 			width: 100%;
+			height: 88px;
 			background: #fff;
 			opacity: 0;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: 88px;
-			z-index: 1;
 			font-weight: bold;
 			transition: opacity 0.3s ease;
 			padding-top: 20px;
